# q8s-kernel

./: .editorconfig  .gitignore  .pyre_configuration  LICENSE  README.md  Untitled1.ipynb  kernel.json  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  dockerfile  dockerinstall.sh  kubeinstall.sh
.github/workflows/: publish.yml
benchmark/: .gitignore  Makefile  README.md  benchmark.py  benchmark_depth.py  plot.ipynb  requirements.txt  test.ipynb  test_GHZ.ipynb  test_QAOA.ipynb  test_QAOA_depth.ipynb  test_QAOA_noise.ipynb  test_QFT.ipynb  test_QV.ipynb
kernels/: Untitled.ipynb  kernel.json  output.txt  python-q8s-kernel.py  temp.py
kernels/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
paper-benchmarks/: GHZ_state_benchmark.ipynb  QAOA_benchmark_simple.ipynb  QFT_benchmark.ipynb  QV_benchmark.ipynb
playground/: qiskit.ipynb
q8s/: __main__.py  cli.py  constants.py  enums.py  execution.py  install.py  k8s.py  kernel.py  project.py  testbook.py  utils.py
q8s/matplotlib/: backend.py
q8s/plugins/: cpu_job.py  cuda_job.py  iqm_job.py  job_template_spec.py
q8s_kernel/: __init__.py  cli.py  execution.py  k8s.py  kernel.py  testbook.py
tests/: test_backend.py  test_deps.py  test_job_template_spec.py  test_kernel.py  test_project.py  test_utils.py
tests/fixtures/: qiskit.py
tests/fixtures/cache/: .gitignore  Q8Sproject  app.py
tests/fixtures/simple/: .env.q8s  qiskit.py
